# tcs

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CEmitter.Expressions.cs  CEmitter.Helpers.cs  CEmitter.cs  CLAUDE.md  CMakeLists.txt  CONTRACT.md  CRuntime.cs  ContractFacts.cs  LICENSE  Model.cs  Program.cs  README.md  SourceFacts.cs  common.h  objective.md  q.md  run-differential.sh  run-fuzz.sh  run-spec-conformance.sh  run-tests.ps1  run-tests.sh  run.sh  tcs.slnx  verify-digests.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
Shared/: TinyCsComplianceFacts.Api.cs  TinyCsComplianceFacts.CollectionNull.cs  TinyCsComplianceFacts.cs
TinyCs.Analyzers/: TinyCs.Analyzers.csproj  TinyCsComplianceAnalyzer.cs
TinyCs.Analyzers.Tests/: TinyCs.Analyzers.Tests.csproj  TinyCsComplianceAnalyzerTests.cs  packages.lock.json
TinySystem/: RuntimeFacades.cs
Transpiler/: CompilationDiagnosticPolicy.cs  FileIdentity.cs  HotReload.cs  Il.cs  IlExport.cs  IncrementalCompilationSession.cs  LuaEmitter.Expressions.cs  LuaEmitter.IlBuild.Expressions.cs  LuaEmitter.IlBuild.Invocations.cs  LuaEmitter.IlBuild.Lowered.cs  LuaEmitter.IlBuild.Patterns.cs  LuaEmitter.IlBuild.cs  LuaEmitter.IlEmit.cs  LuaEmitter.Invocations.cs  LuaEmitter.Objects.cs  LuaEmitter.Operators.cs  LuaEmitter.Patterns.cs  LuaEmitter.Statements.cs  LuaEmitter.cs  LuaRuntime.cs  ModuleArtifacts.cs  NamingAnalyzer.cs  OutputFileWriter.cs  Program.cs  SemanticQueries.cs  SourceMap.cs  SourceMapResolver.cs  Transpiler.cs  Transpiler.csproj  packages.lock.json
Transpiler.Tests/: ActionSemanticTests.cs  ApiSignatureComplianceTests.cs  BclAllowlistExtensionTests.cs  BitwiseOperatorTests.cs  ClassTests.cs  CliRuntimeTests.cs  CollectionTests.cs  ComplianceParityTests.cs  ConsoleCapture.cs  ConsoleCollection.cs  ConsoleSemanticTests.cs  DiagnosticTests.cs  DictSemanticTests.cs  DictionaryWireFormatTests.cs  DigestHarnessTests.cs  DivisionSemanticTests.cs  EntryClassTests.cs  EnumTests.cs  FileLinkTestHelper.cs  FileSizeGateTests.cs  ForLoopTests.cs  FuzzTests.cs  GameScriptTests.cs  HotReloadTests.cs  IlExportTests.cs  IlPipelineTests.cs  IncrementalDifferentialTests.cs  IncrementalSessionTests.cs  InheritanceTests.cs  InheritanceTypeTestTests.cs  InterfaceTests.cs  LambdaTests.cs  LinqSemanticTests.cs  ListSemanticTests.cs  LiteralTests.cs  LuaIdentifierTests.cs  LvalueEvaluationTests.cs  MathSemanticTests.cs  ModuleDescriptorTests.cs  ModuleTransactionTests.cs  (+41 more)
Transpiler.Tests/DigestKernels/: particles.cs  particles_struct.cs  spawn_churn.cs  sprite_update.cs
Transpiler.Tests/SpecConformance/: CorpusDifferential.cs  FuzzGenerator.cs  FuzzRunner.cs  SpecConformanceClassifier.cs  SpecConformanceSweep.cs  SpecDotnetExecutor.cs  SpecExample.cs  SpecExampleExtractor.cs  SpecLuaExecutor.cs  SpecTemplateExpander.cs  conformance-baseline.json  known-differences.json
WasmCompiler/: Program.cs  WasmCompiler.csproj  packages.lock.json
WasmCompiler/wwwroot/: index.html  main.js
bench/: chrome-compile.mjs  chrome-e2e-ack.mjs  chrome-session.mjs  chrome-soak.mjs  m2-registry-spike.lua  player-apply.lua
demos/box2d/: b2lua.c  build.sh  lua_b2  lua_b2_main.c  main.lua  physics.cs  physics.lua
demos/hotreload/: game.cs  game.lua  host.lua
doc/: current.md  done.md  hot-reload-design.md  il-design.md  il-lowering-examples.md  il-reference.md  il-spec.md  incremental-module-compilation-design.md  lub-gap-analysis.md  spec-conformance-design.md  spec-conformance-report.md  spike-ceiling.md  support-matrix.md  tasks.md  wasm-playground-spike.md
luoc/: CEmitter.Closures.cs  CEmitter.Construct.cs  CEmitter.Dict.cs  CEmitter.Expressions.cs  CEmitter.Helpers.cs  CEmitter.cs  CRuntime.cs  ContractFacts.cs  Model.cs  luoc.csproj  verify-digests.sh
perf/: CMakeLists.txt  CONTRACT.md  README.md  aot.c  bench-2backend.sh  common.c  common.h  core.c  native.c  results-pc.md  run.sh
perf/interp/: bench.lua
perf/playdate/: CMakeLists.txt
perf/playdate/Source/: pdxinfo
perf/playdate/src/: aot_hash_impl.c  aot_slot_impl.c  interp_runner.c  main.c  native_impl.c  pd_log.h  pd_shim.c  pd_shim.h
runtime/: module_registry.lua  tinysystem.lua
samples/: collision.cs  entity.cs  game.cs  hello.cs  host_api_game.cs  host_api_stub.cs  inventory.cs  lub3d_hello.cs  statemachine.cs
samples/analyzer-demo/: Program.cs  README.md  RIDER_VERIFICATION_TEMPLATE.md  analyzer-demo.csproj  open-rider-demo.ps1  open-rider-demo.sh  rider-env.ps1  rider-env.sh  verify-inspectcode.ps1  verify-inspectcode.sh  verify-rider-prechecks.ps1  verify-rider-prechecks.sh  verify-rider-scripts.sh
samples/lub/: .gitignore  breakout.cs  hello.cs  lub_shim.lua  lub_stub.cs  run-lub.sh
spike/: CONTRACT.md
tcs2c/: CEmitter.Closures.cs  CEmitter.Construct.cs  CEmitter.Dict.cs  CEmitter.Expressions.cs  CEmitter.Helpers.cs  CEmitter.cs  CRuntime.cs  ContractFacts.cs  Model.cs  Program.cs  README.md  packages.lock.json  tcs2c.csproj  verify-digests.sh
